Production/morningnews-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: morningnews-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - test.obadasoussachaddad.fr
      secretName: example-tls
  rules:
    - host: test.obadasoussachaddad.fr
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: morningnews
                port:
                  number: 80
